[package]
name = "terraform-plugin-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
futures = "0.3"
tokio = "1.6"
tokio-stream = "0.1"
tonic-health = "0.3"
plugin = { path = "../plugin-rs" }

[build-dependencies]
tonic-build = "0.4"
